ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wishlist-service
  labels:
    app: wishlist-service
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /wishlist
        pathType: Prefix
        backend:
          service:
            name: wishlist-service
            port: 
              number: 8080
      - path: /products
        pathType: Prefix
        backend:
           service:
            name: wishlist-service
            port: 
              number: 8081
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: wishlist-service
            port: 
              number: 8082
